diagram tooltip QOL improvements: - maintain the state of multiple diagram charts so the tooltip works on more than one window - prevent flickering on certain mouse movements - only emphasize abs maximums (no zeroes ever) - units included, bold text included for abs maximums - only choose one emphasis point from a group of numerically equivalent points